{
  "version": 4,
  "terraform_version": "1.2.0",
  "serial": 674,
  "lineage": "35963c3f-1bb0-bd1b-aec9-928a217bd843",
  "resources": [
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864450723917:network-interface/eni-02ea9be01055bc161",
            "attachment": [
              {
                "attachment_id": "ela-attach-0283854eaf9533b54",
                "device_index": 1,
                "instance_owner_id": "amazon-aws"
              }
            ],
            "availability_zone": "us-east-1a",
            "description": "ELB net/ecom-nlb/cdabda6fa2822145",
            "filter": [
              {
                "name": "description",
                "values": [
                  "ELB net/ecom-nlb/cdabda6fa2822145"
                ]
              },
              {
                "name": "subnet-id",
                "values": [
                  "subnet-0d99082fc74bdddf2"
                ]
              }
            ],
            "id": "eni-02ea9be01055bc161",
            "interface_type": "network_load_balancer",
            "mac_address": "0a:01:98:19:ff:1d",
            "owner_id": "864450723917",
            "private_dns_name": "ip-10-0-3-222.ec2.internal",
            "private_ip": "10.0.3.222",
            "private_ips": [
              "10.0.3.222"
            ],
            "requester_id": "005270062302",
            "subnet_id": "subnet-0d99082fc74bdddf2",
            "vpc_id": "vpc-01a4c148aa0d5d9e1"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864450723917:network-interface/eni-09c5892af734997f2",
            "attachment": [
              {
                "attachment_id": "ela-attach-0443be00b2b27f24b",
                "device_index": 1,
                "instance_owner_id": "amazon-aws"
              }
            ],
            "availability_zone": "us-east-1b",
            "description": "ELB net/ecom-nlb/cdabda6fa2822145",
            "filter": [
              {
                "name": "description",
                "values": [
                  "ELB net/ecom-nlb/cdabda6fa2822145"
                ]
              },
              {
                "name": "subnet-id",
                "values": [
                  "subnet-090b974c68e795932"
                ]
              }
            ],
            "id": "eni-09c5892af734997f2",
            "interface_type": "network_load_balancer",
            "mac_address": "0e:1b:ee:d2:ec:5b",
            "owner_id": "864450723917",
            "private_dns_name": "ip-10-0-4-131.ec2.internal",
            "private_ip": "10.0.4.131",
            "private_ips": [
              "10.0.4.131"
            ],
            "requester_id": "273749504915",
            "subnet_id": "subnet-090b974c68e795932",
            "vpc_id": "vpc-01a4c148aa0d5d9e1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ecommerce_machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dce57de6dcc3a6cc",
            "arn": "arn:aws:ec2:us-east-1:864450723917:instance/i-0b8f1e7a812fd191d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdcz",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-060bce496cdf0294b",
                "throughput": 0,
                "volume_id": "vol-045125449f7b6510a",
                "volume_size": 22,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Ecommerce-EC2-Instance-Profile",
            "id": "i-0b8f1e7a812fd191d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2api",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0294dc21760ebe681",
            "private_dns": "ip-10-0-1-37.ec2.internal",
            "private_ip": "10.0.1.37",
            "public_dns": "ec2-54-87-22-29.compute-1.amazonaws.com",
            "public_ip": "54.87.22.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0362a66b2cd46cdfb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0194ec08d50e2c697"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0725467413e1d114f",
            "tags": {
              "Environment": "production",
              "Name": "Transaction service",
              "Provisioner": "Terraform",
              "Repo": "github.com/lgarcia93/app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Transaction service",
              "Provisioner": "Terraform",
              "Repo": "github.com/lgarcia93/app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0194ec08d50e2c697"
            ]
          },
          "dependencies": [
            "aws_ecs_cluster.ecom_cluster",
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_security_group.ecommerce_machine_sg",
            "aws_subnet.ecommerce-subnet-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecom_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864450723917:internet-gateway/igw-07dc2c64399e697ea",
            "id": "igw-07dc2c64399e697ea",
            "owner_id": "864450723917",
            "tags": {
              "Name": "Ecom IGW"
            },
            "tags_all": {
              "Name": "Ecom IGW"
            },
            "vpc_id": "vpc-01a4c148aa0d5d9e1"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecom_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:loadbalancer/app/ecom-alb/29477c366483b140",
            "arn_suffix": "app/ecom-alb/29477c366483b140",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ecom-alb-625586745.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:loadbalancer/app/ecom-alb/29477c366483b140",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecom-alb",
            "security_groups": [
              "sg-051939ed2574264df"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-090b974c68e795932"
              },
              {
                "subnet_id": "subnet-0d99082fc74bdddf2"
              }
            ],
            "subnets": [
              "subnet-090b974c68e795932",
              "subnet-0d99082fc74bdddf2"
            ],
            "vpc_id": "vpc-01a4c148aa0d5d9e1",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_lb.network_ecommerce_loadbalancer",
            "aws_security_group.alb_security_group",
            "aws_subnet.ecommerce-subnet-private-1",
            "aws_subnet.ecommerce-subnet-private-2",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "network_ecommerce_loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:loadbalancer/net/ecom-nlb/cdabda6fa2822145",
            "arn_suffix": "net/ecom-nlb/cdabda6fa2822145",
            "dns_name": "ecom-nlb-cdabda6fa2822145.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:loadbalancer/net/ecom-nlb/cdabda6fa2822145",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "ecom-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-090b974c68e795932"
              },
              {
                "subnet_id": "subnet-0d99082fc74bdddf2"
              }
            ],
            "subnets": [
              "subnet-090b974c68e795932",
              "subnet-0d99082fc74bdddf2"
            ],
            "vpc_id": "vpc-01a4c148aa0d5d9e1",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_subnet.ecommerce-subnet-private-1",
            "aws_subnet.ecommerce-subnet-private-2",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_cart_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:listener/app/ecom-alb/29477c366483b140/73af2f9babbf6f43",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/alb-tg-5001-alb/865e780bd5e1f53d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:listener/app/ecom-alb/29477c366483b140/73af2f9babbf6f43",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:loadbalancer/app/ecom-alb/29477c366483b140",
            "port": 5001,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecom_alb",
            "aws_lb.network_ecommerce_loadbalancer",
            "aws_lb_target_group.alb-tg-5001-alb",
            "aws_security_group.alb_security_group",
            "aws_subnet.ecommerce-subnet-private-1",
            "aws_subnet.ecommerce-subnet-private-2",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_products_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:listener/app/ecom-alb/29477c366483b140/ede6a2b110847de0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/alb-tg-5000-alb/1cac869d364d392e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:listener/app/ecom-alb/29477c366483b140/ede6a2b110847de0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:loadbalancer/app/ecom-alb/29477c366483b140",
            "port": 5000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecom_alb",
            "aws_lb.network_ecommerce_loadbalancer",
            "aws_lb_target_group.alb-tg-5000-alb",
            "aws_security_group.alb_security_group",
            "aws_subnet.ecommerce-subnet-private-1",
            "aws_subnet.ecommerce-subnet-private-2",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_user_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:listener/app/ecom-alb/29477c366483b140/7748fd4013efa709",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/alb-tg-6000-alb/c929d338089ba186",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:listener/app/ecom-alb/29477c366483b140/7748fd4013efa709",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:loadbalancer/app/ecom-alb/29477c366483b140",
            "port": 6000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecom_alb",
            "aws_lb.network_ecommerce_loadbalancer",
            "aws_lb_target_group.alb-tg-6000-alb",
            "aws_security_group.alb_security_group",
            "aws_subnet.ecommerce-subnet-private-1",
            "aws_subnet.ecommerce-subnet-private-2",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb-listener-cart-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:listener/net/ecom-nlb/cdabda6fa2822145/8ed9df55577a6465",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/nlb-tg-5001-alb/06ef039d1a716593",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:listener/net/ecom-nlb/cdabda6fa2822145/8ed9df55577a6465",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:loadbalancer/net/ecom-nlb/cdabda6fa2822145",
            "port": 5001,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.network_ecommerce_loadbalancer",
            "aws_lb_target_group.nlb-tg-5001-nlb",
            "aws_subnet.ecommerce-subnet-private-1",
            "aws_subnet.ecommerce-subnet-private-2",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb-listener-product-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:listener/net/ecom-nlb/cdabda6fa2822145/7c7e716994c4d717",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/nlb-tg-5000-alb/c0cc8bf10adf0ce8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:listener/net/ecom-nlb/cdabda6fa2822145/7c7e716994c4d717",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:loadbalancer/net/ecom-nlb/cdabda6fa2822145",
            "port": 5000,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.network_ecommerce_loadbalancer",
            "aws_lb_target_group.nlb-tg-5000-nlb",
            "aws_subnet.ecommerce-subnet-private-1",
            "aws_subnet.ecommerce-subnet-private-2",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb-listener-user-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:listener/net/ecom-nlb/cdabda6fa2822145/4d4cb7c4d5763d77",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/nlb-tg-6000-alb/13dadc18b2db778f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:listener/net/ecom-nlb/cdabda6fa2822145/4d4cb7c4d5763d77",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:loadbalancer/net/ecom-nlb/cdabda6fa2822145",
            "port": 6000,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.network_ecommerce_loadbalancer",
            "aws_lb_target_group.nlb-tg-6000-nlb",
            "aws_subnet.ecommerce-subnet-private-1",
            "aws_subnet.ecommerce-subnet-private-2",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg-5000-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/alb-tg-5000-alb/1cac869d364d392e",
            "arn_suffix": "targetgroup/alb-tg-5000-alb/1cac869d364d392e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/alb-tg-5000-alb/1cac869d364d392e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-tg-5000-alb",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01a4c148aa0d5d9e1"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg-5001-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/alb-tg-5001-alb/865e780bd5e1f53d",
            "arn_suffix": "targetgroup/alb-tg-5001-alb/865e780bd5e1f53d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/alb-tg-5001-alb/865e780bd5e1f53d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-tg-5001-alb",
            "port": 5001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01a4c148aa0d5d9e1"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg-6000-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/alb-tg-6000-alb/c929d338089ba186",
            "arn_suffix": "targetgroup/alb-tg-6000-alb/c929d338089ba186",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/alb-tg-6000-alb/c929d338089ba186",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-tg-6000-alb",
            "port": 6000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01a4c148aa0d5d9e1"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nlb-tg-5000-nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/nlb-tg-5000-alb/c0cc8bf10adf0ce8",
            "arn_suffix": "targetgroup/nlb-tg-5000-alb/c0cc8bf10adf0ce8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/nlb-tg-5000-alb/c0cc8bf10adf0ce8",
            "lambda_multi_value_headers_enabled": false,
            "name": "nlb-tg-5000-alb",
            "port": 5000,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "alb",
            "vpc_id": "vpc-01a4c148aa0d5d9e1"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nlb-tg-5001-nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/nlb-tg-5001-alb/06ef039d1a716593",
            "arn_suffix": "targetgroup/nlb-tg-5001-alb/06ef039d1a716593",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/nlb-tg-5001-alb/06ef039d1a716593",
            "lambda_multi_value_headers_enabled": false,
            "name": "nlb-tg-5001-alb",
            "port": 5001,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "alb",
            "vpc_id": "vpc-01a4c148aa0d5d9e1"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nlb-tg-6000-nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/nlb-tg-6000-alb/13dadc18b2db778f",
            "arn_suffix": "targetgroup/nlb-tg-6000-alb/13dadc18b2db778f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/nlb-tg-6000-alb/13dadc18b2db778f",
            "lambda_multi_value_headers_enabled": false,
            "name": "nlb-tg-6000-alb",
            "port": 6000,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "alb",
            "vpc_id": "vpc-01a4c148aa0d5d9e1"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "g-attachment-alb-5001",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/nlb-tg-5001-alb/06ef039d1a716593-20220601130156995800000003",
            "port": 5001,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/nlb-tg-5001-alb/06ef039d1a716593",
            "target_id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:loadbalancer/app/ecom-alb/29477c366483b140"
          },
          "dependencies": [
            "aws_lb.ecom_alb",
            "aws_lb_target_group.nlb-tg-5001-nlb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "g-attachment-alb-6000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/nlb-tg-6000-alb/13dadc18b2db778f-20220601130156656100000002",
            "port": 6000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/nlb-tg-6000-alb/13dadc18b2db778f",
            "target_id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:loadbalancer/app/ecom-alb/29477c366483b140"
          },
          "dependencies": [
            "aws_lb.ecom_alb",
            "aws_lb_target_group.nlb-tg-6000-nlb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attachment-alb-5000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/nlb-tg-5000-alb/c0cc8bf10adf0ce8-20220601130156568600000001",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/nlb-tg-5000-alb/c0cc8bf10adf0ce8",
            "target_id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:loadbalancer/app/ecom-alb/29477c366483b140"
          },
          "dependencies": [
            "aws_lb.ecom_alb",
            "aws_lb_target_group.nlb-tg-5000-nlb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attachment-cart-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/alb-tg-6000-alb/c929d338089ba186-20220601130323530000000007",
            "port": 5001,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/alb-tg-6000-alb/c929d338089ba186",
            "target_id": "i-0b8f1e7a812fd191d"
          },
          "dependencies": [
            "aws_ecs_cluster.ecom_cluster",
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_instance.ecommerce_machine",
            "aws_lb_target_group.alb-tg-6000-alb",
            "aws_security_group.ecommerce_machine_sg",
            "aws_subnet.ecommerce-subnet-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attachment-product-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/alb-tg-5000-alb/1cac869d364d392e-20220601130323893400000009",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/alb-tg-5000-alb/1cac869d364d392e",
            "target_id": "i-0b8f1e7a812fd191d"
          },
          "dependencies": [
            "aws_ecs_cluster.ecom_cluster",
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_instance.ecommerce_machine",
            "aws_lb_target_group.alb-tg-5000-alb",
            "aws_security_group.ecommerce_machine_sg",
            "aws_subnet.ecommerce-subnet-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attachment-user-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/alb-tg-6000-alb/c929d338089ba186-20220601130323613100000008",
            "port": 6000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:864450723917:targetgroup/alb-tg-6000-alb/c929d338089ba186",
            "target_id": "i-0b8f1e7a812fd191d"
          },
          "dependencies": [
            "aws_ecs_cluster.ecom_cluster",
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_instance.ecommerce_machine",
            "aws_lb_target_group.alb-tg-6000-alb",
            "aws_security_group.ecommerce_machine_sg",
            "aws_subnet.ecommerce-subnet-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07dc2c64399e697ea",
            "id": "r-rtb-07ae5d8c123f2c5801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07ae5d8c123f2c580",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ecom_internet_gateway",
            "aws_route_table.rt",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864450723917:route-table/rtb-07ae5d8c123f2c580",
            "id": "rtb-07ae5d8c123f2c580",
            "owner_id": "864450723917",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07dc2c64399e697ea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EcomVPCRouteTable"
            },
            "tags_all": {
              "Name": "EcomVPCRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a4c148aa0d5d9e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ecom_internet_gateway",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d12cade4ca704a7",
            "route_table_id": "rtb-07ae5d8c123f2c580",
            "subnet_id": "subnet-0725467413e1d114f"
          },
          "dependencies": [
            "aws_internet_gateway.ecom_internet_gateway",
            "aws_route_table.rt",
            "aws_subnet.ecommerce-subnet-public-1",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0422dbf2975661900",
            "route_table_id": "rtb-07ae5d8c123f2c580",
            "subnet_id": "subnet-0f9edd382a97a413e"
          },
          "dependencies": [
            "aws_internet_gateway.ecom_internet_gateway",
            "aws_route_table.rt",
            "aws_subnet.ecommerce-subnet-public-2",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864450723917:security-group/sg-051939ed2574264df",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0194ec08d50e2c697"
                ],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0194ec08d50e2c697"
                ],
                "self": false,
                "to_port": 5001
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0194ec08d50e2c697"
                ],
                "self": false,
                "to_port": 6000
              }
            ],
            "id": "sg-051939ed2574264df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6000
              }
            ],
            "name": "sg_ecom_alb",
            "name_prefix": "",
            "owner_id": "864450723917",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01a4c148aa0d5d9e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecommerce_machine_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864450723917:security-group/sg-0194ec08d50e2c697",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0194ec08d50e2c697",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-051939ed2574264df"
                ],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-051939ed2574264df"
                ],
                "self": false,
                "to_port": 5001
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-051939ed2574264df"
                ],
                "self": false,
                "to_port": 6000
              }
            ],
            "name": "sg_ecommerce",
            "name_prefix": "",
            "owner_id": "864450723917",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01a4c148aa0d5d9e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_link_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864450723917:security-group/sg-0135091fed0f3f3be",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0135091fed0f3f3be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpclink-sg",
            "name_prefix": "",
            "owner_id": "864450723917",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01a4c148aa0d5d9e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_alb_egress_5000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 5000,
            "id": "sgrule-2495071575",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051939ed2574264df",
            "self": false,
            "source_security_group_id": "sg-0194ec08d50e2c697",
            "to_port": 5000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.ecommerce_machine_sg",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_alb_egress_5001",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 5001,
            "id": "sgrule-4100800728",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051939ed2574264df",
            "self": false,
            "source_security_group_id": "sg-0194ec08d50e2c697",
            "to_port": 5001,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.ecommerce_machine_sg",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_alb_egress_6000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 6000,
            "id": "sgrule-275504701",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051939ed2574264df",
            "self": false,
            "source_security_group_id": "sg-0194ec08d50e2c697",
            "to_port": 6000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.ecommerce_machine_sg",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce-subnet-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864450723917:subnet/subnet-0d99082fc74bdddf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d99082fc74bdddf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864450723917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-01a4c148aa0d5d9e1"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce-subnet-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864450723917:subnet/subnet-090b974c68e795932",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090b974c68e795932",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864450723917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-01a4c148aa0d5d9e1"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce-subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864450723917:subnet/subnet-0725467413e1d114f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0725467413e1d114f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "864450723917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-01a4c148aa0d5d9e1"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce-subnet-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864450723917:subnet/subnet-0f9edd382a97a413e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9edd382a97a413e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "864450723917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-01a4c148aa0d5d9e1"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecommerce_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864450723917:vpc/vpc-01a4c148aa0d5d9e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ee6c12dc414def19",
            "default_route_table_id": "rtb-0bcfd69d797cbed5d",
            "default_security_group_id": "sg-0e4c0bd2ce29645b4",
            "dhcp_options_id": "dopt-08e46a867ef36f193",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01a4c148aa0d5d9e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bcfd69d797cbed5d",
            "owner_id": "864450723917",
            "tags": {
              "Name": "Ecom VPC"
            },
            "tags_all": {
              "Name": "Ecom VPC"
            }
          }
        }
      ]
    }
  ]
}